service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-service
  namespace: juice
spec:
  type: ClusterIP
  selector:
    app: juice-shop
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 3000
